# podcaster-gpt

./: .gitignore  Dockerfile  README.md  app.py  backend.py  process_chunk.py  process_transcribe.py  pyproject.toml  train_dpo.py  train_sft.py
.github/workflows/: build-and-deploy.yml
processing/: README.md  chunk_mp3s.py  create_dpo_examples.py  create_sft_examples.py  data_types.py  dwarkesh_create_data.py  dwarkesh_urls.txt  process_transcripts.py  step1_chunk_mp3s.py  step2_transcribe.py  step3_process_transcripts.py  step3b_clean_transcripts.py  step4_create_sft_examples.py  step5_create_dpo_examples.py  step6_train_val_split.py  train_val_split.py  transcribe.py  transcript_types.py
