[project]
name = "podcaster-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
    "openai>=2.20.0",
    "pre-commit>=4.5.1",
    "pydub>=0.25.1",
    "together>=2.1.1",
    "datasets>=4.5.0",
    "trl>=0.28.0",
    "peft>=0.18.1",
    "modal>=1.3.3",
]
